# PortfolioApp

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: PRD.md
services/backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
services/backend/alembic/: README.md  env.py  script.py.mako
services/backend/alembic/versions/: 1424e418cf2f_add_pgcrypto_extension.py  1eb76f5d0962_initial_schema.py  41a49f518de4_initial_schema.py  4bb4124c8435_fix_events_occured_at_spelling.py  8248031a8484_initial_schema.py  d0d69e463126_create_pts_user.py  e33a8930ab69_update_events_table_add_services_and_.py  f1bec4b2c33e_initial_schema.py
services/backend/api/: routes.py
services/backend/api/events/: routes.py  schemas.py
services/backend/api/users/: routes.py  schemas.py
services/backend/app/: main.py
services/backend/app/api/: deps.py  router.py
services/backend/app/core/: config.py  logger.py
services/backend/app/db/: data_client.py  session.py
services/backend/app/domain/: enums.py  event_bus.py
services/backend/app/models/: __init__.py  base_event.py  deployment_events.py  event.py  events.py
services/backend/app/repositories/: deployment_repository.py  event_log_repository.py  event_repository.py
services/backend/app/schemas/: base_event.py  deployment_events.py  events.py  events_api_models.py  (+1 more)
services/backend/db/: data_client.py  database.jsonl
services/backend/models/: deployment_events.py  service_events.py
services/backend/services/: event_adapter.py  event_service.py
(+107 files in other folders)
